<resources>
    <string name="app_name">Stock Insight</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_continue">Continue</string>
    <string name="msg_dont_s_have_an2">Dont\u2019s have an account? </string>
    <string name="msg_how_to_create_a2">How to create a Kitsbase account?</string>
    <string name="lbl_25k">$25k</string>
    <string name="lbl_fb">FB</string>
    <string name="lbl_62">.62</string>
    <string name="lbl_buy">Buy</string>
    <string name="lbl_apple_inc">(Apple Inc.)</string>
    <string name="lbl_67">.67</string>
    <string name="msg_approx_share_p">Approx. Share Price</string>
    <string name="lbl_email_address">Email address</string>
    <string name="msg_get_started_wi">Get Started  with Stock Insight</string>
    <string name="msg_enter_your_pin">Enter your PIN number</string>
    <string name="msg_setup_fingerpri">Setup Fingerprint</string>
    <string name="lbl_thr">Thr</string>
    <string name="lbl_referral_code">Referral Code</string>
    <string name="lbl_149">$149</string>
    <string name="msg_let_s_sign_you">Let\u2019s Sign You In</string>
    <string name="lbl_we">We</string>
    <string name="msg_your_total_bal">Your Total  Balance</string>
    <string name="lbl_fr">Fr</string>
    <string name="lbl_aapl2">AAPL </string>
    <string name="lbl_phone_number">Phone number</string>
    <string name="lbl_1_208_242">$1,208.24 </string>
    <string name="lbl_260">$260</string>
    <string name="lbl_japanese">Japanese</string>
    <string name="lbl_224_88">$224.88</string>
    <string name="lbl_382">$382</string>
    <string name="lbl_portfolio">Portfolio</string>
    <string name="lbl_general">General</string>
    <string name="lbl_2_022">+2,02  </string>
    <string name="lbl_confirm_order">Confirm Order</string>
    <string name="lbl_50">.50</string>
    <string name="lbl_51">51</string>
    <string name="lbl_12h">12H</string>
    <string name="lbl_382_20">$382.20</string>
    <string name="msg_hi_kitsbase_gma">hi.kitsbase@gmail.com</string>
    <string name="lbl_156_50">$156.50|</string>
    <string name="lbl_834_146">834,146</string>
    <string name="lbl_forgot">Forgot?</string>
    <string name="lbl_alphabet_inc">Alphabet Inc.</string>
    <string name="lbl_october">October</string>
    <string name="lbl_810">810%</string>
    <string name="msg_transaction_com">Transaction Complete</string>
    <string name="lbl_order_history">Order History</string>
    <string name="lbl_sun">Sun</string>
    <string name="msg_open_the_tradeb">Open the Tradebase app to get started and follow the steps. Tradebase doesn\u2019t charge a fee to create or maintain your Tradebase account.</string>
    <string name="lbl_4h">4H</string>
    <string name="lbl_start">Start</string>
    <string name="lbl_42">.42</string>
    <string name="lbl_tu">Tu</string>
    <string name="lbl_apple">Apple</string>
    <string name="msg_aapl_apple_inc">AAPL (Apple Inc.)</string>
    <string name="lbl_history">History</string>
    <string name="lbl_buy_stock">Buy Stock</string>
    <string name="lbl_365">$365</string>
    <string name="lbl_999_999_999">999 999 999</string>
    <string name="msg_enter_4_digit_c2">Enter 4-digit code we just texted to your phone number, </string>
    <string name="msg_spotify_portfol">Spotify Portfolio</string>
    <string name="lbl_367">$367</string>
    <string name="lbl_12_031_082_20">$12,031,082.20</string>
    <string name="lbl_high">High</string>
    <string name="lbl_setup_face_id">Setup Face ID</string>
    <string name="lbl_240">$240</string>
    <string name="lbl_setup_pin">Setup PIN</string>
    <string name="lbl_today2">Today</string>
    <string name="lbl_1h">1H</string>
    <string name="lbl_french">French</string>
    <string name="lbl_30">30</string>
    <string name="lbl_resend_code">Resend code</string>
    <string name="lbl_31">31</string>
    <string name="lbl_1m">1M</string>
    <string name="lbl_all_order">All Order</string>
    <string name="lbl_su">Su</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_1w">1W</string>
    <string name="lbl_31_082_20">$31,082.20</string>
    <string name="lbl_112">11</string>
    <string name="msg_secure_your_acc">Secure your account</string>
    <string name="lbl_1y">1Y</string>
    <string name="lbl_overall_loss">Overall Loss</string>
    <string name="lbl_select_stocks">Select Stocks</string>
    <string name="lbl_110">$1</string>
    <string name="lbl_th">Th</string>
    <string name="msg_a_place_that_pr">"A place that provides you with the world's top stocks that you can track and follow"</string>
    <string name="lbl_legal">Legal</string>
    <string name="lbl_2_16">+$2.16</string>
    <string name="lbl_20">.20</string>
    <string name="lbl_5200">$5200</string>
    <string name="lbl_23">23</string>
    <string name="lbl_english">English</string>
    <string name="lbl_24">24</string>
    <string name="lbl_21">21</string>
    <string name="lbl_22">2</string>
    <string name="lbl_volume">Volume</string>
    <string name="lbl_1_41">1,41%</string>
    <string name="lbl_27">27</string>
    <string name="lbl_28">28</string>
    <string name="lbl_25">25</string>
    <string name="lbl_26">26</string>
    <string name="lbl_12_031_082">$12,031,082</string>
    <string name="lbl_29">29</string>
    <string name="lbl_622">62</string>
    <string name="lbl_sa">Sa</string>
    <string name="lbl_502">$50</string>
    <string name="lbl_payment_meth">Payment Meth\u2026</string>
    <string name="msg_i_agree_to_the">I agree to the Terms of Service and Privacy Policy</string>
    <string name="lbl_1d">1D</string>
    <string name="lbl_spotify2">(Spotify)</string>
    <string name="lbl_2_84k">$2.84k</string>
    <string name="lbl_contact_us">Contact Us</string>
    <string name="lbl_12">12</string>
    <string name="lbl_13">13</string>
    <string name="msg_you_can_use_fac">You can use face authentication
to login into Tradebase</string>
    <string name="lbl_10">10</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_statistics">Statistics</string>
    <string name="lbl_11">.11</string>
    <string name="lbl_sign_up">Sign up</string>
    <string name="lbl_refer_friend">Refer friend</string>
    <string name="lbl_16">.16</string>
    <string name="lbl_17">17</string>
    <string name="lbl_14">14</string>
    <string name="lbl_15">15</string>
    <string name="lbl_buy_aapl">Buy AAPL</string>
    <string name="lbl_18">18</string>
    <string name="msg_hi_kitsbase_le">Hi Kitsbase, Let me know you need help and you can ask us any questions.</string>
    <string name="lbl_19">19</string>
    <string name="msg_create_an_accou">Create an account to continue!</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="lbl_stocks">Stocks</string>
    <string name="msg_invest_big_amou">Invest big amounts</string>
    <string name="lbl_224_54">224.54</string>
    <string name="lbl_spot_spotify">SPOT (Spotify)</string>
    <string name="lbl_apple_inc2">Apple Inc.</string>
    <string name="lbl_0_903">0.90%</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_0_902">0,90%</string>
    <string name="msg_gainers_and_los">Gainers and Losers</string>
    <string name="lbl_169_8">$169.8</string>
    <string name="msg_you_can_buy_sto">You can buy stock with a bank account or debit card.</string>
    <string name="lbl_74_902">$74,902</string>
    <string name="lbl_microsoft">Microsoft</string>
    <string name="lbl_02">$0</string>
    <string name="msg_share_your_frie">Share your friend get $20 of free stocks</string>
    <string name="lbl_avg_volume">Avg. Volume</string>
    <string name="lbl_tesla_motors">Tesla Motors</string>
    <string name="lbl_apple_pay">Apple Pay</string>
    <string name="lbl_payment_details">Payment details</string>
    <string name="lbl_funding_source">Funding source</string>
    <string name="lbl_not_yet_ordered">Not Yet Ordered</string>
    <string name="msg_share_this_code">Share this code with your friend and
both of you will get $10 free stocks.</string>
    <string name="lbl_280">$280</string>
    <string name="lbl_security">Security</string>
    <string name="lbl_162">16</string>
    <string name="lbl_facebook_inc">Facebook, Inc</string>
    <string name="lbl_367_67">$367.67</string>
    <string name="lbl_sell">Sell</string>
    <string name="lbl_1_461_009">1,461,009</string>
    <string name="msg_enter_your_emai">Enter your email to recover your password</string>
    <string name="msg_we_d_love_to_he">"We'd love to hear your feedback on threads, if you have any?"</string>
    <string name="lbl_settings">Settings</string>
    <string name="msg_there_is_no_rec">There is no recent stock you order,
let\u2019s make your first investment!</string>
    <string name="lbl_stock_detail">Stock Detail</string>
    <string name="lbl_156">$156</string>
    <string name="lbl_how_to_invest">How to Invest</string>
    <string name="msg_how_to_create_a">How to create a account?</string>
    <string name="lbl_billing_payment">Billing/Payment</string>
    <string name="lbl_5200_11">$5200.11</string>
    <string name="lbl_msft">MSFT</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_tradebase">Tradebase</string>
    <string name="lbl_fee">Fee</string>
    <string name="msg_write_a_reply">Write a reply...</string>
    <string name="msg_enter_4_digit_c">Enter 4-digit code we just texted to your phone number, +84 999 999 999</string>
    <string name="msg_search_company">Search  company, stocks...</string>
    <string name="lbl_another_payment">Another Payment</string>
    <string name="lbl2">\u2022 \u2022 \u2022 \u2022 \u2022 \u2022</string>
    <string name="lbl3">|</string>
    <string name="msg_already_have_an">Already have an account ? Sign in</string>
    <string name="lbl_appl_70">APPL: 70%</string>
    <string name="lbl_2202_42">$2202.42</string>
    <string name="lbl_sign_in">Sign in</string>
    <string name="msg_connect_your_pa">Connect your PayPal account</string>
    <string name="msg_invest_small_am">Invest small amounts</string>
    <string name="lbl_order">Order</string>
    <string name="lbl_may">May</string>
    <string name="lbl_0_23">0.23%</string>
    <string name="lbl_mo">Mo</string>
    <string name="lbl_302_1">$302.1</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="lbl_low">Low</string>
    <string name="lbl_top_stocks">Top Stocks</string>
    <string name="lbl_spot">SPOT</string>
    <string name="lbl_wed">Wed</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="lbl_stock_you_buy">Stock you buy</string>
    <string name="lbl_hi_kitsbase">Hi, </string>
    <string name="lbl_verification">Verification</string>
    <string name="lbl_224_10">224.10</string>
    <string name="lbl_nike_inc">Nike, Inc.</string>
    <string name="lbl_100k">$100k</string>
    <string name="lbl_75k">$75k</string>
    <string name="msg_choose_payment">Choose Payment Method</string>
    <string name="lbl_approx_shares">Approx. Shares</string>
    <string name="lbl_support">Support</string>
    <string name="lbl_226_9">$226,9</string>
    <string name="lbl_0_59">0.59%</string>
    <string name="msg_buy_trade_top">Buy &amp; Trade Top Stock</string>
    <string name="lbl_0_58">0,58%</string>
    <string name="lbl_090">.090</string>
    <string name="lbl_127_00">$127.00</string>
    <string name="msg_set_up_2_step_v">Set up 2-step verification</string>
    <string name="lbl_bank_transfer">Bank Transfer</string>
    <string name="lbl_365_51">$365.51</string>
    <string name="lbl_7d">7D</string>
    <string name="lbl_30m">30m</string>
    <string name="symbol">Symbol</string>
    <string name="company_name">Company name</string>
    <string name="blank_value">00.00</string>
</resources>