<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearItems"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_10pxv"
    android:layout_marginEnd="@dimen/_20pxh"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/linearColumnfacebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.66"
        android:gravity="start"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/linearRowfacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginEnd="@dimen/_24pxh"
            android:gravity="start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageFacebook"
                android:layout_width="@dimen/_48pxh"
                android:layout_height="@dimen/_48pxh"
                android:layout_marginBottom="@dimen/_1pxv"
                android:scaleType="fitXY"
                android:src="@drawable/img_facebook"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_facebook" />

            <LinearLayout
                android:id="@+id/linearNasdaq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtFB"
                    style="@style/txtEudoxusSansbold18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_5pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_fb"
                    tools:text="@string/lbl_fb" />

                <TextView
                    android:id="@+id/txtFacebookInc"
                    style="@style/txtEudoxusSansbold12_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_facebook_inc"
                    tools:text="@string/lbl_facebook_inc" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearRowline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:gravity="start"
            android:orientation="horizontal">

            <View
                android:id="@+id/lineLine"
                android:layout_width="@dimen/_2pxh"
                android:layout_height="@dimen/_56pxv"
                android:background="@drawable/rectangle_bg_light_green_500_radius_1" />

            <LinearLayout
                android:id="@+id/linearColumnpriceTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_marginBottom="@dimen/_2pxv"
                android:gravity="start"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearRowpriceTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtPriceTwo"
                        style="@style/txtEudoxusSansbold18"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.49"
                        android:ellipsize="end"
                        android:lineSpacingExtra="@dimen/_5pxh"
                        android:singleLine="true"
                        android:text="@string/lbl_365_51"
                        tools:text="@string/lbl_365_51" />

                    <LinearLayout
                        android:id="@+id/linearPercent1"
                        android:background="@drawable/rectangle_bg_light_green_500_radius_10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_weight="0.51"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageArrowupOne"
                            android:layout_width="@dimen/_8pxh"
                            android:layout_height="@dimen/_6pxh"
                            android:layout_marginStart="@dimen/_8pxh"
                            android:layout_marginTop="@dimen/_7pxv"
                            android:layout_marginBottom="@dimen/_7pxv"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_arrowup_light_green_900"
                            tools:ignore="ContentDescription"
                            tools:src="@drawable/img_arrowup_light_green_900" />

                        <TextView
                            android:id="@+id/txtFiftyNine"
                            style="@style/txtEudoxusSansbold12"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_4pxh"
                            android:layout_marginTop="@dimen/_2pxv"
                            android:layout_marginEnd="@dimen/_8pxh"
                            android:layout_marginBottom="@dimen/_1pxv"
                            android:layout_weight="0.83"
                            android:ellipsize="end"
                            android:lineSpacingExtra="@dimen/_4pxh"
                            android:singleLine="true"
                            android:text="@string/lbl_0_59"
                            tools:text="@string/lbl_0_59"
                            tools:ignore="NestedWeights" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/txtPriceThree"
                    style="@style/txtEudoxusSansbold14_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_367_67"
                    tools:text="@string/lbl_367_67" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageChart"
            android:layout_width="@dimen/_215pxh"
            android:layout_height="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription"
            android:src="@drawable/img_chart_light_green_500"
            tools:src="@drawable/img_chart_light_green_500" />

        <LinearLayout
            android:id="@+id/linearMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDistance"
                style="@style/txtEudoxusSansbold12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@string/lbl_30m"
                tools:text="@string/lbl_30m" />

            <TextView
                android:id="@+id/txt1H"
                style="@style/txtEudoxusSansbold12_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@string/lbl_1h"
                tools:text="@string/lbl_1h" />

            <TextView
                android:id="@+id/txt4H"
                style="@style/txtEudoxusSansbold12_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@string/lbl_4h"
                tools:text="@string/lbl_4h" />

            <TextView
                android:id="@+id/txt1D"
                style="@style/txtEudoxusSansbold12_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@string/lbl_1d"
                tools:text="@string/lbl_1d" />

            <TextView
                android:id="@+id/txt7D"
                style="@style/txtEudoxusSansbold12_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@string/lbl_7d"
                tools:text="@string/lbl_7d" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
